Build the grids component.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       content="width=
     , initial-scale=1.0"
     />
-    <title>Document</title>
+    <title>Moshify</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
